--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-    "name": "mon-app",
+    "name": "ma-todolist",
     "version": "0.1.0",
     "dependencies": {
-        "markdown": "~0.4"
-    }
+        "markdown": "~0.4",
+        "express": "~4.16.3",
+        "ejs": "~2.5.9",
+        "cookie-session": "~1.3.2",
+        "body-parser": "~1.18.2"
+    },
+    "author": "Mateo21 <mateo21@email.com>",
+    "description": "Un gestionnaire de todolist ultra basique"
 }
